# kuka_kr300_support

./: README.md  package.xml
config/: joint_names_kr300r2500pro.yaml
launch/: load_kr300r2500pro.launch  load_kr300r2500ultra.launch  test_kr300r2500pro.launch  test_kr300r2500ultra.launch
meshes/kr300r2500pro/collision/: base_link.stl  link_1.stl  link_5.stl
meshes/kr300r2500pro/visual/: base_link.dae  link_2.dae  link_2.stl  link_4.stl  link_5.dae
meshes/kr300r2500ultra/collision/: link_2.stl  link_3.stl  link_4.stl  link_6.stl
meshes/kr300r2500ultra/visual/: link_3.dae  link_4.dae  link_6.dae
urdf/: kr300r2500pro.urdf  kr300r2500pro.xacro  kr300r2500pro_macro.xacro  kr300r2500ultra.urdf  kr300r2500ultra.xacro  kr300r2500ultra_macro.xacro
